# exo-workspace

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
benchmark/: CMakeLists.txt  avx2_matmul_bench.cpp
src/exo_workspace/: CMakeLists.txt  avx2_matmul.py
test/: CMakeLists.txt  avx2_matmul_test.cpp  golden.txt  golden_scheduled.txt  test_golden.py
